feat(api): always detect the document type
